crates/solidity-v2/testing/snapshots/diagnostics_output/structure/free_function_with_override/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 1750] Error: Free functions cannot override.
   ╭─[input.sol:5:1]
   │
 5 │ function fun() override {}
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
